feat: fulfill network reservations as sales
